--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Landing Page Project</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="header-container">
+        <div>
+            <div class="header-logo">Header Logo</div>
+            <div>
+                <ol class="header-links">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ol>
+            </div>
+        </div>
+        <div>
+            <div>
+                <div>This website is awesome</div>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div>this is a placeholder for a image</div>
+        </div>
+    </div>
+    <div>
+        <h2>Some random information</h2>
+        <div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div>
+            <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling uo space, or
+                maybe people will actually read it. who knows? All I know is that it looks nice.</div>
+            <div>-Thor, God of Thunder</div>
+        </div>
+    </div>
+    <div>
+        <div>
+            <div>
+                <div>Call to action! It's time!</div>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <div>Copyright &#169; The odin Project 2021</div>
 </body>
+
 </html>
