--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="header-container">
-        <div>
-            <div class="header-logo">Header Logo</div>
-            <div>
-                <ol class="header-links">
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ol>
+        <div class="top-content">
+            <div class="header">
+                <div class="header-logo">Header Logo</div>
+                <div>
+                    <ol class="header-links">
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ol>
+                </div>
             </div>
-        </div>
-        <div>
-            <div>
-                <div>This website is awesome</div>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
-                    is lower contrast</p>
-                <button>Sign up</button>
-            </div>
-            <div>this is a placeholder for a image</div>
+            <div class="hero">
+                <div class="modal">
+                    <div class="hero-main-text">This website is awesome</div>
+                    <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color
+                        is lower contrast</p>
+                    <button class="hero-button">Sign up</button>
+                </div>
+                <div class="placeholder">this is a placeholder for a image</div>
+            </div> 
         </div>
     </div>
     <div>
