Add more css structure and fixed some html typos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -18,62 +19,64 @@
             <div class="header">
                 <div class="header-logo">Header Logo</div>
                 <div>
-                    <ol class="header-links">
+                    <ul class="header-links">
                         <li><a href="#">header link one</a></li>
                         <li><a href="#">header link two</a></li>
                         <li><a href="#">header link three</a></li>
-                    </ol>
+                    </ul>
                 </div>
             </div>
             <div class="hero">
                 <div class="modal">
                     <div class="hero-main-text">This website is awesome</div>
-                    <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color
+                    <p class="hero-secondary-text">This website has some subtext that goes here under the main title.
+                        It's a smaller font and the color
                         is lower contrast</p>
                     <button class="hero-button">Sign up</button>
                 </div>
                 <div class="placeholder">this is a placeholder for a image</div>
-            </div> 
-        </div>
-    </div>
-    <div>
-        <h2>Some random information</h2>
-        <div>
-            <div>
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div>
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div>
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div>
-                <div></div>
-                <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
-    <div>
-        <div>
-            <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling uo space, or
+    <div class="info-container">
+        <h2 class="some-info">Some random information</h2>
+        <div class="image-placeholder">
+            <div class="placeholder-container">
+                <div class="info-placeholder"></div>
+                <p class="placeholder-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="placeholder-container">
+                <div class="info-placeholder"></div>
+                <p class="placeholder-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="placeholder-container">
+                <div class="info-placeholder"></div>
+                <p class="placeholder-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="placeholder-container">
+                <div class="info-placeholder"></div>
+                <p class="placeholder-text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="quote-container">
+        <div class="quote-author-container">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling
+                uo space, or
                 maybe people will actually read it. who knows? All I know is that it looks nice.</div>
-            <div>-Thor, God of Thunder</div>
+            <div class="author">-Thor, God of Thunder</div>
         </div>
     </div>
     <div>
-        <div>
-            <div>
-                <div>Call to action! It's time!</div>
-                <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="second-modal">
+            <div class="call-to-action-container">
+                <div class="call-to-action">Call to action! It's time!</div>
+                <p class="call-to-action-text">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button>Sign up</button>
+            <button class="modal-button">Sign up</button>
         </div>
     </div>
-    <div>Copyright &#169; The odin Project 2021</div>
+    <div class="footer">Copyright &#169; The odin Project 2021</div>
 </body>
 
 </html>
