--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
     <div class="quote-container">
         <div class="quote-author-container">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling
-                uo space, or
-                maybe people will actually read it. who knows? All I know is that it looks nice.</div>
+                up space, or maybe people will actually read it. who knows? All I know is that it looks nice.</div>
             <div class="author">-Thor, God of Thunder</div>
         </div>
     </div>
