--- a/index.html
+++ b/index.html
@@ -15,26 +15,28 @@
 
 <body>
     <div class="header-container">
-        <div class="top-content">
-            <div class="header">
-                <div class="header-logo">Header Logo</div>
-                <div>
-                    <ul class="header-links">
-                        <li><a href="#">header link one</a></li>
-                        <li><a href="#">header link two</a></li>
-                        <li><a href="#">header link three</a></li>
-                    </ul>
-                </div>
+        <div class="header">
+            <div class="header-logo">Header Logo</div>
+            <div>
+                <ul class="header-links">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
             </div>
-            <div class="hero">
-                <div class="modal">
-                    <div class="hero-main-text">This website is awesome</div>
-                    <p class="hero-secondary-text">This website has some subtext that goes here under the main title.
-                        It's a smaller font and the color
-                        is lower contrast</p>
-                    <button class="hero-button">Sign up</button>
-                </div>
-                <div class="placeholder">this is a placeholder for a image</div>
+        </div>
+    </div>
+    <div class="hero-container">
+        <div class="hero">
+            <div class="modal">
+                <div class="hero-main-text">This website is awesome</div>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title.
+                    It's a smaller font and the color
+                    is lower contrast</p>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="placeholder">
+                <div class="image"></div>
             </div>
         </div>
     </div>
@@ -66,10 +68,10 @@
             <div class="author">-Thor, God of Thunder</div>
         </div>
     </div>
-    <div>
-        <div class="second-modal">
+    <div class="modal-2-container">
+        <div class="second-modal main">
             <div class="call-to-action-container">
-                <div class="call-to-action">Call to action! It's time!</div>
+                <div class="call-to-action">Call to action! It's time</div>
                 <p class="call-to-action-text">Sign up for our product by clicking that button right over there!</p>
             </div>
             <button class="modal-button">Sign up</button>
