Fix css/flex elements on the hero class

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="hero-button">Sign up</button>
             </div>
             <div class="placeholder">
-                <div class="image"></div>
+                <img class="image" src="./images/pexels-pixabay-50577.jpg" alt="animal">
             </div>
         </div>
     </div>
